--- a/css/pages/contact.css
+++ b/css/pages/contact.css
@@ -3,3 +3,91 @@
 @import '../layout/header.css';
 @import '../layout/footer.css';
 /* ==================================== */
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
+
+* {
+  font-family: "Montserrat", sans-serif;
+}
+
+body {
+  background-color: #fffaf6;
+  width: 100%;
+  height: 100vh;
+}
+.section-main{
+  margin: 50px 0;
+}
+.contactUs {
+  font-weight: 900;
+  font-size: 36px;
+  padding-left: 11px;
+  margin-bottom: 15px;
+}
+
+.inputContainer {
+  width: 900px;
+}
+
+main {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 0 207px;
+
+  .inputIn {
+    display: flex;
+  }
+  
+  .text {
+    height: 55px;
+    width: 400px;
+    padding-left: 20px;
+    margin: 12px;
+  }
+}
+
+.inputIn input{
+  border: 1px solid #bdbdbd;
+}
+
+.inputBottom {
+  display: flex;
+  width: 830px;
+  margin-left: 12px;
+  margin-top: 15px;
+}
+
+.note {
+  width: 100%;
+  height: 150px;
+  box-sizing: border-box;
+  resize: none;
+  padding: 20px;
+  border: 1px solid #bebebe;
+
+}
+.buttonMain{
+ display: flex;
+ justify-content: center;
+ margin-top: 40px;
+}
+.sendButton{
+  width: 400px;
+  height: 55px;
+  background-color: darkorange;
+  color: white;
+  border: 1px solid #cecece;
+}
+
+.inputBottom input{
+  border: 1px solid #ac14ed;
+  
+}
+
+input:hover {
+  border-color:  blue;
+}
+
+input:focus {
+  border-color: rgb(234, 210, 133);
+}
